// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component renders Section red 1`] = `
.c5 {
  display: flex;
  flex-direction: column;
}

.c6 {
  font-size: 32px;
  font-weight: 700;
  margin: 12px 0;
}

.c0 {
  width: 100%;
  background-color: #E40F0F;
  color: #FFFFFF;
}

.c1 {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  max-width: 1440px;
  padding: 32px 106px;
  padding-bottom: 60px;
  width: 100%;
}

.c2 {
  display: flex;
  align-items: center;
  list-style: none;
  gap: 4px;
}

.c3 {
  display: flex;
  align-items: center;
  font-size: 12px;
  font-weight: 700;
  color: #ffffff;
  gap: 4px;
  text-decoration: none;
}

.c3:hover {
  text-decoration: underline;
}

.c4 {
  display: flex;
  align-items: center;
  font-size: 12px;
  font-weight: 700;
  color: #ffffff;
  gap: 4px;
  text-decoration: none;
}

.c4:before {
  content: ' > ';
  font-weight: 300;
}

<div>
  <div
    class="c0"
    data-testid="container-styled"
    stylepattern="primary"
  >
    <div
      class="c1"
    >
      <ul
        class="c2"
        data-testid="breadcrumbs-list"
      >
        <a
          href="/"
        >
          <li
            class="c3"
          >
            Home
          </li>
        </a>
        <li
          class="c4"
          data-testid="breadcrumbs-items"
        >
          Initial path
        </li>
      </ul>
      <section
        class="c5"
        data-testid="section-component"
      >
        <h1
          class="c6"
        >
          Hello World!
        </h1>
        <p>
          its a long text
        </p>
      </section>
    </div>
  </div>
</div>
`;

exports[`Section component renders Section white 1`] = `
.c5 {
  display: flex;
  flex-direction: column;
}

.c6 {
  font-size: 32px;
  font-weight: 700;
  margin: 12px 0;
}

.c0 {
  width: 100%;
}

.c1 {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  max-width: 1440px;
  padding: 32px 106px;
  padding-bottom: 60px;
  width: 100%;
}

.c2 {
  display: flex;
  align-items: center;
  list-style: none;
  gap: 4px;
}

.c3 {
  display: flex;
  align-items: center;
  font-size: 12px;
  font-weight: 700;
  color: #ffffff;
  gap: 4px;
  text-decoration: none;
}

.c3:hover {
  text-decoration: underline;
}

.c4 {
  display: flex;
  align-items: center;
  font-size: 12px;
  font-weight: 700;
  color: #ffffff;
  gap: 4px;
  text-decoration: none;
}

.c4:before {
  content: ' > ';
  font-weight: 300;
}

<div>
  <div
    class="c0"
    data-testid="container-styled"
    stylepattern="white"
  >
    <div
      class="c1"
    >
      <ul
        class="c2"
        data-testid="breadcrumbs-list"
      >
        <a
          href="/"
        >
          <li
            class="c3"
          >
            Home
          </li>
        </a>
        <li
          class="c4"
          data-testid="breadcrumbs-items"
        >
          Initial path
        </li>
      </ul>
      <section
        class="c5"
        data-testid="section-component"
      >
        <h1
          class="c6"
        >
          Hello World!
        </h1>
        <p>
          its a long text
        </p>
      </section>
    </div>
  </div>
</div>
`;
